# banking-fraud-detection-api

./: .gitignore  README.md  config.py  docker-compose.yml  fraud_detection_api\api\__init__.py  fraud_detection_api\core\__init__.py  fraud_detection_api\core\database.py  fraud_detection_api\core\enterprise_security.py  fraud_detection_api\core\security.py  fraud_detection_api\models\ml_models.py  fraud_detection_api\models\schemas.py  fraud_detection_api\repositories\fraud_repository.py  fraud_detection_api\services\fraud_service.py  fraud_detection_api\utils\logger.py  main.py  render_start.py
banking_fraud_api_clean/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
banking_fraud_api_clean/scripts/: deploy.py
banking_fraud_api_clean/src/banking_fraud_api/: __init__.py
banking_fraud_api_clean/src/banking_fraud_api/api/: __init__.py  main.py
banking_fraud_api_clean/src/banking_fraud_api/core/: __init__.py  config.py  enterprise_security.py
banking_fraud_api_clean/src/banking_fraud_api/models/: __init__.py  schemas.py
banking_fraud_api_clean/src/banking_fraud_api/repositories/: __init__.py
banking_fraud_api_clean/src/banking_fraud_api/services/: __init__.py
banking_fraud_api_clean/src/banking_fraud_api/utils/: __init__.py
banking_fraud_api_clean/tests/: test_fraud_detection.py
fraud_detection_api/api/: fraud_detection_api\__init__.py
